--- a/ex_proc.config
+++ b/ex_proc.config
@@ -3,6 +3,6 @@ __cache -E 1 -b 4 -s 8
 // the name is "foo/*" and it takes three arguments
 __foo/* -a 1 */
 __branch -s 7 -b 2 -g 1
-__coherence
+__coherence -s MSI
 __interconnect
 __memory
